--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
     "nuxt-buefy": "^0.4.24",
+    "peerjs": "^1.4.7",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
@@ -25,6 +26,8 @@
     "babel-jest": "^29.1.2",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
+    "sass": "^1.57.1",
+    "sass-loader": "^10",
     "ts-jest": "^29.0.3",
     "vue-jest": "^3.0.4"
   }
